# anki-tts

./: .gitignore  LICENSE  README.md  anki_tts_menu.py  build_addon.sh  compare_voices.py  console.py  launch.sh  package-lock.json  pyproject.toml
anki_tts_addon/: CLAUDE.md  __init__.py  config.json  manifest.json  model_downloader.py  text_processing.py  tts_engine.py
swift_app/: Package.swift  run.sh
swift_app/Resources/: anki_tts.py
swift_app/Sources/AnkiTTSApp/: main.swift
tests/: test_text_processing.py
