[project]
name = "anki-tts"
version = "0.2.0"
description = "Text-to-Speech application for Anki with both Python and Swift implementations"
authors = [
    {name = "Lucas Paulo de Lima Camillo"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31.0",
    "pyttsx3>=2.90",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["swift_app/Resources"]
include = ["swift_app/Resources/anki_tts.py"]