[project]
name = "anki-tts"
version = "0.4.0"
description = "Text-to-Speech menu bar application for Anki flashcards"
authors = [
    {name = "Lucas Paulo de Lima Camillo"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31.0",
    "rumps>=0.4.0",
    "rich>=13.0.0",
    "edge-tts>=7.0.0",
]